[package]
name = "nbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
home = "0.5.4"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
scraper = "0.16.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
